clusters/cl01tl/manifests/harbor/HTTPRoute-http-route-harbor.yaml
---
# Source: harbor/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-harbor
  namespace: harbor
  labels:
    app.kubernetes.io/name: http-route-harbor
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/part-of: harbor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - harbor.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /service/
        - path:
            type: PathPrefix
            value: /v2/
        - path:
            type: PathPrefix
            value: /c/
      backendRefs:
        - group: ''
          kind: Service
          name: harbor-core
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: harbor-portal
          port: 80
          weight: 100
